--- a/gleam.toml
+++ b/gleam.toml
@@ -16,6 +16,8 @@ target = "javascript"
 [dependencies]
 gleam_stdlib = ">= 0.34.0 and < 2.0.0"
 lustre = ">= 5.1.0 and < 6.0.0"
+json = ">= 1.4.1 and < 2.0.0"
+gleam_json = ">= 3.0.1 and < 4.0.0"
 
 [dev-dependencies]
 gleeunit = ">= 1.0.0 and < 2.0.0"
